Memasukkan fitur Masuk dan keluar ke dalam main

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.associations": {
         "profile.h": "c",
         "boolean.h": "c",
-        "wordmachine.h": "c"
+        "wordmachine.h": "c",
+        "commandmachine.h": "c"
     }
 }
