Syncron kicau and kicauan to main

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "profile.h": "c",
         "boolean.h": "c",
         "wordmachine.h": "c",
-        "commandmachine.h": "c"
+        "commandmachine.h": "c",
+        "datetime.h": "c"
     }
 }
